{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 8,
  "lineage": "714c8760-7ee5-32fe-ba32-3ba59e367f09",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "honeypot_allow_ssh_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-09-11T15:10:22.196-07:00",
            "deny": [],
            "description": "HONEYPOT: SSH intentionally exposed to the internet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/siem-detection-lab/global/firewalls/honeypot-allow-ssh-public",
            "log_config": [],
            "name": "honeypot-allow-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
            "priority": 1000,
            "project": "siem-detection-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/firewalls/honeypot-allow-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "honeypot"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "siem_allow_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1514",
                  "1515"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-09-11T15:10:22.321-07:00",
            "deny": [],
            "description": "SIEM: Wazuh agent ports allowed only from Honeypot VM",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/siem-detection-lab/global/firewalls/siem-allow-agent",
            "log_config": [],
            "name": "siem-allow-agent",
            "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
            "priority": 1000,
            "project": "siem-detection-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/firewalls/siem-allow-agent",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "honeypot"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "siem"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "siem_allow_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-09-11T15:10:22.232-07:00",
            "deny": [],
            "description": "SIEM: SSH and Dashboard restricted to your IP only",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/siem-detection-lab/global/firewalls/siem-allow-mgmt",
            "log_config": [],
            "name": "siem-allow-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
            "priority": 1000,
            "project": "siem-detection-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/firewalls/siem-allow-mgmt",
            "source_ranges": [
              "58.84.62.206/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "siem"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "honeypot",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260906",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/zones/us-central1-a/disks/siem-lab-honeypot"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/siem-detection-lab/zones/us-central1-a/instances/siem-lab-honeypot",
            "instance_id": "160127430471303819",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYRRmqA6qYi13FQhb/Gx6NOkcZvxo+T6Zc8ecM2FrFxzlSJWRqWaGjTANFq2u1V6HeomaC8+UxZTGniujZLgmG7xP1BGrhvoqM9NcVBlMa+Vyy9qx1srB9PLmhJ6k73N4pIpKb7EAe7FQATPt9YEucmgBzop1oUWKhvtXhMtBrQw+oXdcLpDVphtOfG6yITVZjUfEdwvg0D9xyevOT6jD0+QMiH4n/HR6uGIIidZ7Znlp9WRpWhawIXcUcHsFiFnaTLM7tXViHKCrwvRy8RWLRMNw1fE1ZTwwzi5NI4TKoAGeeXT02meUPg38X6sLJ9A+5SvxCgHd2i6kBas7W0XS2ldR8DSxZ48GJ6jXL8Uw2gFSwNf01l7Q5fggHpDvSVMqbccRpkVv35dyPoep6CmEHHRui2o4KzlYpOh5Ah/58Rv [...]
              "startup-script": "#!/usr/bin/env bash\n# =============================================================================\n# setup_honeypot.sh — Honeypot VM Bootstrap\n# Phase 0: Runs automatically on first boot via cloud-init (user_data)\n# Phase 2: Re-run manually with WAZUH_MANAGER_IP set to enroll agent\n#\n# What this does:\n#   1. System updates + essential packages\n#   2. Install auditd + configure exec/file-watch audit rules\n#   3. Harden SSH: disable password auth (key-onl [...]
            },
            "metadata_fingerprint": "4iSHRpi8L50=",
            "name": "siem-lab-honeypot",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.224.179.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/regions/us-central1/subnetworks/siem-lab-public-subnet",
                "subnetwork_project": "siem-detection-lab"
              }
            ],
            "project": "siem-detection-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/zones/us-central1-a/instances/siem-lab-honeypot",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "honeypot"
            ],
            "tags_fingerprint": "il-JPds7Zc4=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "siem",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260906",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/zones/us-central1-a/disks/siem-lab-wazuh"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/siem-detection-lab/zones/us-central1-a/instances/siem-lab-wazuh",
            "instance_id": "3767079517278552716",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDYRRmqA6qYi13FQhb/Gx6NOkcZvxo+T6Zc8ecM2FrFxzlSJWRqWaGjTANFq2u1V6HeomaC8+UxZTGniujZLgmG7xP1BGrhvoqM9NcVBlMa+Vyy9qx1srB9PLmhJ6k73N4pIpKb7EAe7FQATPt9YEucmgBzop1oUWKhvtXhMtBrQw+oXdcLpDVphtOfG6yITVZjUfEdwvg0D9xyevOT6jD0+QMiH4n/HR6uGIIidZ7Znlp9WRpWhawIXcUcHsFiFnaTLM7tXViHKCrwvRy8RWLRMNw1fE1ZTwwzi5NI4TKoAGeeXT02meUPg38X6sLJ9A+5SvxCgHd2i6kBas7W0XS2ldR8DSxZ48GJ6jXL8Uw2gFSwNf01l7Q5fggHpDvSVMqbccRpkVv35dyPoep6CmEHHRui2o4KzlYpOh5Ah/58Rv [...]
            },
            "metadata_fingerprint": "5hDkT2phnVk=",
            "name": "siem-lab-wazuh",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.210.72",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/regions/us-central1/subnetworks/siem-lab-public-subnet",
                "subnetwork_project": "siem-detection-lab"
              }
            ],
            "project": "siem-detection-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/zones/us-central1-a/instances/siem-lab-wazuh",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "siem"
            ],
            "tags_fingerprint": "aFvzodYOeHY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "siem_lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/siem-detection-lab/global/networks/siem-lab-vpc",
            "mtu": 0,
            "name": "siem-lab-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4193096936821736152",
            "project": "siem-detection-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-09-11T15:10:23.901-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/siem-detection-lab/regions/us-central1/subnetworks/siem-lab-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "siem-lab-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/global/networks/siem-lab-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "siem-detection-lab",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/siem-detection-lab/regions/us-central1/subnetworks/siem-lab-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.siem_lab_vpc"
          ]
        }
      ]
    }
  ]
}